-- Added Basic Authentication
Secured 2 endpoints with it
- GET /movie/get-top-movies-by-imdb
- GET /movie/get-top-movies-by-popularity
